--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:src="@drawable/wallpaper" />
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
+            android:layou_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/thumbnail"
             android:maxLines="3"
