--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
             android:textSize="22dp" />
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_eight="wrap_content"
             android:layout_below="@+id/title"
             android:maxLines="3"
             android:padding="8dp"
