--- a/app/src/main/res/layout/home_view.xml
+++ b/app/src/main/res/layout/home_view.xml
@@ -17,7 +17,7 @@
             >
 
             <ImageView
-                android:layout_width="wrapcontent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/news_photo"
                 android:layout_alignParentLeft="true"
