--- a/app/src/main/res/layout/home_view.xml
+++ b/app/src/main/res/layout/home_view.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cv"
         >
 
-        <RelativeLayout
+        <RelativeLayou
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
@@ -42,7 +42,7 @@
                 android:layout_below="@+id/news_title"
                 />
 
-        </RelativeLayout>
+        </RelativeLayou>
 
     </android.support.v7.widget.CardView>
 
