--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/card_view"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="380dp"
-    android:layout_margin="8dp">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/thumbnail"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_alignParentTop="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/wallpaper" />
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/thumbnail"
-            android:maxLines="3"
-            android:padding="8dp"
-            android:text="@string/title"
-            android:textColor="#222"
-            android:textStyle="bold"
-            android:textSize="22dp" />
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/thumbnail"
-            android:maxLines="3"
-            android:padding="8dp"
-            android:text="@string/time"
-            android:textColor="#222"
-            android:textStyle="bold"
-            android:textSize="22dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_eight="wrap_content"
-            android:layout_below="@+id/title"
-            android:maxLines="3"
-            android:padding="8dp"
-            android:text="@string/description"
-            android:textColor="#666"
-            android:textSize="14dp" />
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+    android:layout_height="match_parent"
+    tools:context="com.amknews.amknews.MainActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AMK News!" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+</android.support.constraint.ConstraintLayout>
+
