--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_news_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.amknews.amknews.NewsDetailsActivity"
+    tools:context="com.amknews.amknews.NewsDetailsActivity">
 
 
     <WebView
